force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC 処理ステータス</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>