force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/fields/pd_jp_20151124__AlertLastNotifyMonthLimit__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AlertLastNotifyMonthLimit__c</fullName>
    <label>企業情報の月間上限超過アラート最終通知日</label>
    <type>DateTime</type>
</CustomField>