force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/fields/pd_jp_20151124__DatasetUploadLastDt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__DatasetUploadLastDt__c</fullName>
    <label>データセットアップロード最終対象日時</label>
    <type>DateTime</type>
</CustomField>