force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/fields/pd_jp_20151124__IsGetPastnumProgress__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__IsGetPastnumProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ数取得処理フラグ</label>
    <type>Checkbox</type>
</CustomField>