force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/fields/pd_jp_20151124__jobId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__jobId__c</fullName>
    <label>ジョブID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>