force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/fields/pd_jp_20151124__ManualUpdateRunningInfo__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ManualUpdateRunningInfo__c</fullName>
    <label>手動取得の実行状況</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>