force-app/main/default/objects/pd_jp_20151124__Pardot_DocodocoJp_Status_CO__c/listViews/pd_jp_20151124__All.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>